# omnifit

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.TXT  README.md  README.rst  ah_bootstrap.py  bhcoat.py  dev_environment.yml  index.html  omnifit (OU Dell's conflicted copy 2013-09-23).py~  omnifit.py  omnifit.py.bak.230913  omnifit.py~  omnifit.sublime-workspace  params.json  pip-requirements  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_publish.yml  ci_release.yml  ci_test_publish.yml
.tmp/test/: testfile.csv  testfile.xml
doc/: Makefile  changelog_link.html  examples.html  genindex.html  index.html  installation.html  make.bat  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
doc/_modules/: index.html
doc/_modules/omnifit/fitter/: fitter.html
doc/_modules/omnifit/spectrum/: spectrum.html
doc/_modules/omnifit/utils/: utils.html
doc/_sources/: examples.txt  index.txt  overview.txt
doc/_sources/api/: omnifit.fitter.Fitter.txt  omnifit.spectrum.AbsorptionSpectrum.txt  omnifit.spectrum.BaseSpectrum.txt  omnifit.spectrum.CDESpectrum.txt  omnifit.utils.Baseliner.txt  omnifit.utils.cde_correct.txt  omnifit.utils.complex_transmission_reflection.txt  omnifit.utils.kramers_kronig.txt
doc/api/: omnifit.fitter.Fitter.html  omnifit.spectrum.AbsorptionSpectrum.html  omnifit.spectrum.BaseSpectrum.html  omnifit.spectrum.CDESpectrum.html  omnifit.utils.Baseliner.html  omnifit.utils.cde_correct.html  omnifit.utils.complex_transmission_reflection.html  omnifit.utils.kramers_kronig.html
doc/source/: conf.py  index.rst
docs/: conf.py  examples.rst  index.rst  installation.rst  overview.rst
docs/_files/: labdata.csv  obsdata.csv
docs/omnifit/: index.rst
docs/whatsnew/: 0.1.rst
licenses/: LICENSE.rst  LICENSE_OMNIFIT.rst
old/: egh.py  egh.py~  emg.py  emg.py~  flip_egh.py  flip_egh.py~
omnifit/: __init__.py  conftest.py  omnifit.py
omnifit/data/: waterice_absorption.txt  watermethanol_absorption.txt
omnifit/fitter/: __init__.py  fitter.py  functions.py
omnifit/fitter/tests/: test_fitter.py
omnifit/spectrum/: __init__.py  spectrum.py  utils.py
omnifit/spectrum/tests/: test_spectrumcreation.py  test_spectruminfo.py  test_spectrummanipulation.py  test_spectrumplotting.py
omnifit/tests/: helpers.py  setup_package.py
omnifit/tests/data/: waterice_absorption.txt  waterice_nandk.txt  watermethanol_absorption.txt
omnifit/utils/: __init__.py  utils.py
omnifit/utils/tests/: test_kkrelation.py  test_units.py
stylesheets/: stylesheet.css
