[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = omnifit
description = Omnifit - astronomical ice spectroscopy fitting
long_description = This is a package for doing ice spectroscopy fitting of interstellar ices
author = Aleksi Suutarinen
author_email = aleksi.suutarinen@iki.fi
license = BSD
url = https://github.com/RiceMunk/omnifit
download_url = https://github.com/RiceMunk/omnifit/tarball/v0.1.1
edit_on_github = True
github_project = RiceMunk/omnifit
